# zk-example-cosmwasm

./: README.md  package-lock.json  package.json
circuit/: multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau  proof.json  verifier.sol
contracts/simple-zk/: Cargo.toml  verification_key.json
contracts/simple-zk/artifacts/: checksums.txt  checksums_intermediate.txt  simple_zk-aarch64.wasm
contracts/simple-zk/examples/: schema.rs
contracts/simple-zk/src/: contract.rs  lib.rs  msg.rs  state.rs  verifier.rs  zk.rs
